--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,10 @@
         ],
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+        "files":[
+          "app/Common/helper.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
