unity command modify

--- a/.env.local
+++ b/.env.local
@@ -10,3 +10,10 @@ BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
+
+#UNITY SETTING
+UNITY_SERIAL=
+UNITY_USERNAME=
+UNITY_PASSWORD=
+
+
