--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
             "database"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Project\\": "project/"
         },
         "files":[
           "app/Common/helper.php"
