--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,14 @@ npm-debug.log
 
 #Project関連
 project/*
+!/project/
+/project/*
 !/project/.gitkeep
+
+!/project/Data/
+/project/Data/*
 !/project/Data/.gitkeep
+
+!/project/Controllers/
+/project/Controllers/*
 !/project/Controllers/.gitkeep
